# solana-server

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/routes/: keypair.rs  message.rs  mod.rs  send.rs  token.rs
src/types/: instruction.rs  message.rs  mod.rs  request.rs  response.rs  token.rs
